$Id: NEWS,v 1.840 2007-10-05 15:47:18 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

1.3.1 - Released 5-Oct-2007
--------------------------------
- Bug 2944 - mod_sql_mysql fails to compile due to missing quotation.
- Bug 2946 - Anonymous logins fail if the mod_facl module is enabled.
- Bug 2947 - SIGBUS on Mac OS X when dynamically loading shared libs.
- Bug 2950 - Hostname with multiple IP addresses might cause "ai_family not
  supported" error if IPv6 support enabled.
- Bug 2955 - Undeclared identifier MAP_FAILED for mod_delay on AIX.
- Bug 2958 - mod_wrap2 does not handle multiple rules in access files.
- Bug 2963 - Use of -A option for LIST/NLST commands not cleared for
  subsequent commands.
- Bug 2964 - Building RPM fails because of *snprintf trying to be redefined.
  This is actually caused by a particular combination of compiler flags
  (-O2 and -Wp,-D_FORTIFY_SOURCE=2), which are used by the `rpmbuild'
  command in some Linux releases.
- Bug 2974 - Install error if multiple modules, using their own build script,
  are built as shared modules.
- Bug 2981 - Command-line long options --ipv4 and --ipv6 do not work.
- Bug 2795 - Improvements to RPM .spec file to build more of the modules, plus
  better optional packaging organization.

1.3.1rc3 - Released 04-Jul-2007
--------------------------------
- Bug 2875 - Malformed getopt checks cause compilation errors in getopt.c.
- Bug 2877 - ServerType 'inetd' results in "getnameinfo error: ai_family not
  supported" errors in log.
- Bug 2878 - Error compiling proftpd on Solaris 2.9 using --with-lastlog.
- Bug 2881 - ProFTPD does not support OPTS UTF8 command when --enable-nls is
  used.